PODS-2662: status clipping is being fixed

--- a/app/assets/stylesheets/partials/_scheme__list.scss
+++ b/app/assets/stylesheets/partials/_scheme__list.scss
@@ -86,15 +86,10 @@ p.status { margin-bottom: 0;}
   font-weight: 700;
   padding: 0 10px;
   position: relative;
-  top: -1px;
+  top: 6px;
   text-align: center;
-  width: 80px;
   margin-right: 20px;
   line-height: initial;
-}
-
-.cya-status.status{
-  vertical-align:top
 }
 
 .complete {
